--- a/build.gradle
+++ b/build.gradle
@@ -18,3 +18,7 @@ dependencies {
     testCompile 'org.assertj:assertj-core:3.10.0'
     testCompile 'org.mockito:mockito-core:2.+'
 }
+
+wrapper {
+    gradleVersion = '4.8.1'
+}
