--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,10 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.2.0'
-    testCompile 'org.junit.jupiter:junit-jupiter-params:5.2.0'
-    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.4.1'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.4.1'
 
-    testCompile 'org.assertj:assertj-core:3.10.0'
+    testImplementation 'org.assertj:assertj-core:3.11.1'
 }
 
 test {
